--- a/modules/help/_posts/2017-01-01-help.md
+++ b/modules/help/_posts/2017-01-01-help.md
@@ -15,8 +15,8 @@ permalink: /:title/
 Do the following to get help with problems.
 
 1. Google the problem.
-2. Post to the [Discord Homework Channel](https://discord.com/channels/746125611117969550/1060614903871844412).
-    - The advantage of the GitHub issues forum is its advanced system for including formatted code. It sounds minor, but seeing the formatted code helps with problem-solving.
+2. Post to the [Discord Homework Channel](https://discord.gg/WbYnJCtcs6).
+    - Connect with your classmates through Discord.
 3. Get help from [Michael Cassens]({{site.baseurl}}/instructors/)
     - If you have problems or need help that no one can offer, please contact Michael Cassens (me, the one writing all of this).
     - The best way to get a hold of me is to swing by my weekly office hours or set up a Zoom conference call. These are posted (and updated) under my [office hours section]({{site.baseurl}}/instructors/#office-hours). 
