--- a/modules/syllabus/_posts/2017-01-01-syllabus.md
+++ b/modules/syllabus/_posts/2017-01-01-syllabus.md
@@ -6,5 +6,5 @@ permalink: /:title/
 
 # Syllabus<br/>Creative Coding 1, MART 120
 
-<iframe src="https://montana-media-arts.github.io/MART120-Fall2022/modules/week-1/imgs/Syl-S23-MART120-50-MCassens.pdf" height="100%" width="100%"></iframe>
+<a href="https://moodle.umt.edu/mod/resource/view.php?id=2568290&redirect=1" target="_blank">Syllabus</a>.
 
