--- a/modules/help/_posts/2017-01-01-help.md
+++ b/modules/help/_posts/2017-01-01-help.md
@@ -7,7 +7,7 @@ permalink: /:title/
 
 ## Help Quick Links
 
-- [Discord Homework Channel](https://discord.com/channels/746125611117969550/1060614903871844412)
+- [Discord Homework Channel](https://discord.gg/WbYnJCtcs6)
 - [Email Michael Cassens](mailto:michael.cassens@umontana.edu?subject=120%20Question)
 
 ## Help Procedures
