--- a/modules/week-14/_posts/2015-01-01-homework.md
+++ b/modules/week-14/_posts/2015-01-01-homework.md
@@ -10,7 +10,7 @@ In this homework, you are going to use your project from last time to implement 
 
 <a href="//youtu.be/0ChP01lq20M" data-lity>Homework 14 Walkthrough</a>
 
-<a href="https://github.com/Montana-Media-Arts/120_CreativeCoding1-Fall2022-Samples/tree/main/Homework%2014" target="_blank">Homework 14 Example</a>
+<a href="https://github.com/Montana-Media-Arts/120_CreativeCoding1-Fall2023-Samples/tree/main/Homework%2014" target="_blank">Homework Example</a>
 
 ## Specifications
 
