--- a/modules/week-4/_posts/2017-01-05-app-lab.md
+++ b/modules/week-4/_posts/2017-01-05-app-lab.md
@@ -18,13 +18,13 @@ jotted: true
 
 <p>Want some practice before we start?</p>
     
-<p><a href="https://studio.code.org/s/applab-intro/stage/1/puzzle/1" target="_new">App Lab Puzzle</a></p>
+<p><a href="https://studio.code.org/s/applab-intro/stage/1/puzzle/1" target="_blank">App Lab Puzzle</a></p>
 </div>
 <div id="Lab" class="tabcontent">
 
 <p>Creating apps is a fun way to write code and then share it with your friends. So, that's one of the things we are going to do this week.</p>
 
-<p>First go to <a href="https://code.org/educate/applab" target="_new">App Lab</a> with Code.org.</p> 
+<p>First go to <a href="https://code.org/educate/applab" target="_blank">App Lab</a> with Code.org.</p> 
 
 <p>Click on the <b>Try it out</b> button.  You may have to sign in with a Google account, or there are other choices too.</p>
 
