--- a/modules/week-5/_posts/2017-01-03-download.md
+++ b/modules/week-5/_posts/2017-01-03-download.md
@@ -17,7 +17,7 @@ jotted: true
 
 <p><a href="//www.youtube.com/embed/NyjWGMmJpVo" data-lity>Alice Download Video</a></p>
 
-<p>If you haven't already, What you want to do is go to <a href="http://www.alice.org" target="_new">Alice.org</a> and get your specific version. All major platforms are supported, and it's free!  There's nothing wrong with that. </p>
+<p>If you haven't already, What you want to do is go to <a href="http://www.alice.org" target="_blank">Alice.org</a> and get your specific version. All major platforms are supported, and it's free!  There's nothing wrong with that. </p>
 </div>
 
 <div id="Get" class="tabcontent">
