--- a/modules/week-6/_posts/2017-01-25-homework.md
+++ b/modules/week-6/_posts/2017-01-25-homework.md
@@ -29,5 +29,5 @@ In this homework, you are going to create a couple of HTML pages.  Hang onto the
 11. Make sure the second page links to the home page and the third page
 12. Make sure the third page links to the home page and the second page.
 13. Upload your pages to a folder in your GitHub repository called Homework 6.
-14. Take the <a href="" target="_blank_">Kahoot Quiz</a> and turn in your results.
+14. Take the <a href="https://kahoot.it/challenge/06311580?challenge-id=84387498-97d5-4d82-ae4e-eabb1c94cf58_1696109253592" target="_blank">Kahoot Quiz</a> and turn in your results.
 15. Turn in a link to your GitHub repository into Moodle.
